# colpali

./: .env.dist  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MTEB_EVALUATION_GUIDE.md  README.md  TRAINING_GUIDE.md  pyproject.toml  pytest.ini  qwen.ipynb  requirements.txt  test.ipynb  test.py  train_colbert.py
.github/: dependabot.yml
.github/workflows/: publish.yml  ruff.yml  test.yml
colpali_engine/: __init__.py
colpali_engine/collators/: __init__.py  beir_collator.py  collator_copy.py  colpali_2_collator.py  corpus_query_collator.py  custom_collator.py  custom_visual_retriever_collator.py  hard_neg_collator.py  hard_neg_collator_docmatix_ir.py  text_retriever_collator.py  visual_retriever_beir_collator.py  visual_retriever_collator.py  visual_retriever_qa_collator.py
colpali_engine/compression/: __init__.py  token_pooling.py
colpali_engine/compression/pooling/: __init__.py  multi_vector_pooler.py
colpali_engine/compression/token_pooling/: __init__.py  base_token_pooling.py  hierarchical_token_pooling.py  lambda_token_pooling.py
colpali_engine/data/: __init__.py  dataset.py  sampler.py
colpali_engine/data/corpus/: __init__.py  base.py  local.py
colpali_engine/dataset/: custom_collator.py  hard_neg_collator.py  hard_neg_collator_docmatix_ir.py
colpali_engine/evaluation/: __init__.py  eval_manager.py  retrieval_evaluator.py  retrieval_scorer.py
colpali_engine/interpretability/: __init__.py  gen_interpretability_plots.py  gen_similarity_maps.py  generate_similarity_maps.py  plot_utils.py  processor.py  similarity_map_utils.py  similarity_maps.py  torch_utils.py  vit_configs.py
colpali_engine/loss/: __init__.py  base_late_interaction_loss.py  bi_encoder_losses.py  colbert_loss.py  colpali_2_loss.py  colpali_2_losses.py  colpali_duo_losses.py  gradcache_late_interaction_losses.py  late_interaction_losses.py  matryoshka_loss.py
colpali_engine/models/: __init__.py  clip_baselines.py  colbert_architectures.py  idefics_colbert_architecture.py  paligemma_colbert_architecture.py
colpali_engine/models/asymmetric/: __init__.py  asymmetric_model.py
colpali_engine/models/bi_encoders/: __init__.py  biidefics_architecture.py  bipali_architecture.py  bisiglip_architecture.py
colpali_engine/models/colidefics/: __init__.py
colpali_engine/models/colpali_2/: colpali_2_architecture.py  colpali_2_config.py  colpali_2_loss.py  colpali_2_modeling_outputs.py  colpali_2_processor.py  colpali_2_utils.py
colpali_engine/models/eurovbert/: __init__.py  configuration_vbert.py  modeling_vbert.py
colpali_engine/models/florence2/: __init__.py
colpali_engine/models/gemma3/: __init__.py
colpali_engine/models/idefics/: __init__.py
colpali_engine/models/idefics2/: __init__.py
colpali_engine/models/idefics3/: __init__.py
colpali_engine/models/idefics_2/: __init__.py
colpali_engine/models/internvl3_5/: __init__.py
colpali_engine/models/late_interaction/: __init__.py  colclip_architecture.py  colidefics_architecture.py  colphi_architecture.py  colqwen_architecture.py  colsiglip_architecture.py
colpali_engine/models/modernvbert/: __init__.py  configuration_modernvbert.py  configuration_vbert.py  modeling_modernvbert.py  modeling_vbert.py
colpali_engine/models/paligemma/: __init__.py
colpali_engine/models/qwen2/: __init__.py
colpali_engine/models/qwen2_5/: __init__.py
colpali_engine/models/qwen3/: __init__.py
colpali_engine/models/qwen3_5/: __init__.py
colpali_engine/token_pooling/: __init__.py  token_pooling.py
colpali_engine/trainer/: __init__.py  colmodel_hf_training.py  colmodel_torch_training.py  colmodel_training.py  colmodel_training_with_trainer.py  contrastive_trainer.py  eval_utils.py  retrieval_evaluator.py
colpali_engine/utils/: colidefics_processing_utils.py  colpali_processing_utils.py  dataset_transformation.py  gpu_stats.py  iter_utils.py  processing_utils.py  torch_utils.py  train_colpali_engine_models.py  transformers_wrappers.py  wrapper.py
custom_colbert/dataset/: custom_collator.py  hf_dataset_names.py
custom_colbert/evaluation/: __init__.py
custom_colbert/interpretability/: gen_interpretability_plots.py  plot_utils.py
custom_colbert/loss/: colbert_loss.py
custom_colbert/models/: clip_baselines.py  paligemma_colbert_architecture.py
custom_colbert/trainer/: contrastive_trainer.py
custom_colbert/utils/: dataset_transformation.py  image_from_page_utils.py  image_utils.py  pdf_utils.py  plot_utils.py  train_custom_colbert_models.py  wrapper.py
demo/: app.py
experiments/colintern3_5-1B-lora/: train_colintern35_model.py
modal_scripts/gemma3/: DEPLOYMENT_GUIDE.md  README_SNAPSHOTS.md  benchmark_embedding_methods.py  client_test.py  serve_hf_snapshot.py  serve_vllm_snapshot.py  test_bigemma3_modal.py  test_colgemma3_modal.py
mteb_wrappers/: colintern3_5_models.py
runs/Sep05_07-27-56_ip-10-192-15-185/: events.out.tfevents.1725521276.ip-10-192-15-185.31612.0
runs/Sep05_08-42-44_ip-10-192-15-185/: events.out.tfevents.1725525764.ip-10-192-15-185.62390.0
scripts/: README.md  api_call.py  compute_hardnegs.py  evaluate_colintern3_5.py  hyperparameter_optimizer.py  init_base_model.py  optuna_optimizer.py  reasoning_queries.py  run_vidore_eval.py  test_mteb_integration.py  verify_target_modules.py
scripts/infer/: run_inference_with_python.py
scripts/train/: train_colbert.py
slurms/colinternvl3_5/: train_colinternvl3_5_1b.slurm  train_colinternvl3_5_2b.slurm
tests/: README.md
tests/collators/: test_visual_retriever_collator.py
tests/compression/: test_token_pooling.py
tests/data/: test_dataset.py  test_sampler.py
tests/evaluation/: test_retrieval_evaluator.py  test_retrieval_scorer.py
tests/interpretability/: test_interpretability_workflow.py  test_similarity_map_utils.py  test_similarity_maps.py
tests/loss/: test_bi_losses.py  test_colpali_2_losses.py  test_colpali_duo_losses.py  test_li_losses.py
tests/models/: test_checkpoint_key_mappings.py
tests/token_pooling/: test_token_pooling.py
tests/utils/: test_processing_utils.py  test_torch_utils.py
(+274 files in other folders)
